# cartminder

./: .gitignore  pyproject.toml
cartminder/: recognize.py  record.py  settings.py  watch.py
cartminder/knowledge/: categories.ndjson  measurements.ndjson  products.ndjson
cartminder/parsing/: parse.py
cartminder/recording/: filesystem_recordings_watcher.py  filesystem_wav_recorder.py
cartminder/recording/sound_capture/: abstract_sound_capturer.py  volume_sound_capturer.py
cartminder/sound_capture/: __init__.py  abstract_sound_capturer.py  volume_sound_capturer.py
cartminder/speech_recognition/: __init__.py  vosk_small_recognizer.py
